--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -66,7 +66,7 @@
 	/*min-height: 20pt;*/
 	background: rgba(40, 40, 40, 0.8784313725); /* #282828e0 */
 	color: @white;
-	font-family: JetBrainsMono Nerd Font;
+	font-family: JetBrainsMono Nerd Font Propo;
 	font-size: 12pt;
 	/*font-weight: bold;*/
 }
